--- a/html/index.html
+++ b/html/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Code Lanss</title>
+    <title>CodeLanss App</title>
   </head>
   <body>
-    <h1>hello world test</h1>
+    <h1>hello world test 1</h1>
   </body>
 </html>
