--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,8 @@
     <title>CodeLanss App</title>
   </head>
   <body>
-    <h1>hello world test 1</h1>
+    <header>
+      <h1>CodeLanss</h1>
+    </header>
   </body>
 </html>
