--- a/html/login.html
+++ b/html/login.html
@@ -1,17 +1,25 @@
-
 <!DOCTYPE html>
 <html lang="pt-Br">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login CodeLanss App</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <main>
         <h1>Login</h1>
-        <form action=""></form>
+        <form method="POST">
+            <label for="email">Email</label>
+            <input type="email" name="email" id="email" placeholder="Digite Seu Email">
+            <label for="password">Senha</label>
+            <input type="password" name="password" id="password" placeholder="Insira Sua Senha">text
+            <button type="submit">Entrar</button>
+        </form>
 
     </main>
-  </body>
+</body>
+
 </html>
