--- a/html/login.html
+++ b/html/login.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-Br">
-
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login CodeLanss App</title>
+    <link rel="stylesheet" href="/css/login.css">
 </head>
 
 <body>
@@ -15,11 +15,9 @@
             <label for="email">Email</label>
             <input type="email" name="email" id="email" placeholder="Digite Seu Email">
             <label for="password">Senha</label>
-            <input type="password" name="password" id="password" placeholder="Insira Sua Senha">text
+            <input type="password" name="password" id="password" placeholder="Insira Sua Senha">
             <button type="submit">Entrar</button>
         </form>
-
     </main>
 </body>
-
 </html>
